--- a/estilos/style.css
+++ b/estilos/style.css
@@ -36,3 +36,11 @@ section#telefone{
     background-size: contain;
    
 }
+
+iframe#tela{
+    position: relative;
+    top: 63px;
+    left: 18px;
+    width: 203px;
+    height: 358px;
+}
