criei botoes na lateral

--- a/estilos/style.css
+++ b/estilos/style.css
@@ -44,3 +44,21 @@ iframe#tela{
     width: 203px;
     height: 358px;
 }
+section#redes-sociais{
+    text-align: right;
+}
+section#redes-sociais img{
+    width: 50px;
+    margin: 5px;
+    border-radius: 50%;
+    box-shadow: 2p 2px 5px rgba(0, 0, 0, 0.400);
+    box-sizing: border-box;
+
+}
+
+section#redes-sociais img:hover{
+    border: 2px solid white;
+    transform: translate(-3px, -3px);
+    box-shadow: 5px 5px 10px rgb(0, 0, 0);
+    transition: transform 0.3s, border 0.5s;
+}
